--- a/dascy_frontend/src/components/feature/feature.css
+++ b/dascy_frontend/src/components/feature/feature.css
@@ -10,7 +10,7 @@
 }
 
 .dascy__courses-container__feature-image {
-    margin: 2rem 0;
+    margin: 2rem 0.5rem;
 }
 
 .dascy__courses-container__feature-content {
@@ -57,7 +57,7 @@
     }
 
     .dascy__courses-container__feature-image {
-        margin: -2rem 0;
+        margin: 1rem -2rem;
     }
 
     .dascy__courses-container__feature-content {
