--- a/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
+++ b/dascy_frontend/src/Pages/PhyLayer/idTwo/idTwo.css
@@ -31,6 +31,7 @@
     align-items: flex-end;
     transition: .6s cubic-bezier(.28,-0.03,0,.99);
     box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
+    background-color: #F9F8FD;
 }
 .dascy__idTwo-card > .dascy__idTwo-row{
     color: white;
@@ -46,6 +47,9 @@
     justify-content: center;
     align-items: center;
     margin: 15px;
+}
+#icon{
+  margin: 295px -65px 15px 15px ;
 }
 .dascy__idTwo-card > .dascy__idTwo-row > .dascy__idTwo-description{
     display: flex;
@@ -78,29 +82,302 @@ input:checked + label .dascy__idTwo-description{
     transform: translateY(0) !important;
 }
 .dascy__idTwo-card[for='c1'] {
-    background-image: url('../../../assets/idTwo/codage1.PNG');
-    background-size: 600px 400px;
+    /*background-image: url('../../../assets/idTwo/codage1.PNG');
+    background-size: 600px 400px;*/
 }
 .dascy__idTwo-card[for='c2'] {
-    background-image: url('../../../assets/idTwo/codage2.PNG');
-    background-size: 650px 400px;
+    /*background-image: url('../../../assets/idTwo/codage2.PNG');
+    background-size: 650px 400px;*/
 }
 .dascy__idTwo-card[for='c3'] {
-    background-image: url('../../../assets/idTwo/codage3.PNG');
-    background-size: 610px 400px;
+   /* background-image: url('../../../assets/idTwo/codage3.PNG');
+    background-size: 610px 400px;*/
 }
 .dascy__idTwo-card[for='c4'] {
     background-image: url('../../../assets/idTwo/codage4.PNG');
     background-size: 620px 400px;
 }
 .dascy__idTwo-card[for='c5'] {
-    background-image: url('../../../assets/idTwo/codage5.PNG');
-    background-size: 615px 400px;
+    /*background-image: url('../../../assets/idTwo/codage5.PNG');
+    background-size: 615px 400px;*/
 }
 .dascy__idTwo-card[for='c6'] {
-    background-image: url('../../../assets/idTwo/codage6.PNG');
-    background-size: 605px 400px;
+    /*background-image: url('../../../assets/idTwo/codage6.PNG');
+    background-size: 605px 400px;*/
 }
+#aar1-x{
+  margin-left: 90px;
+  margin-bottom: 90px;
+}
+#arr1-y{
+  margin-left: 110px;
+  margin-top: -300px;
+  margin-bottom: 70px;
+  height: 250px; 
+}
+#arr2-x{
+  margin-left: 90px;
+  margin-bottom: 150px;
+}
+#arr2-y{
+  margin-left: 110px;
+  margin-top: -300px;
+  margin-bottom: 70px;
+  height: 250px; 
+}
+#dash-line{
+  height: 230px; 
+  margin-left: 155px;
+  margin-top: -300px;
+  margin-bottom: 20px;
+}
+#dash-line1 {
+  height: 230px; 
+  margin-left: 200px;
+  margin-bottom: 20px;
+}
+#dash-line2 {
+  height: 230px; 
+  margin-left: 245px;
+  margin-bottom: 20px;
+}
+#dash-line3 {
+  height: 230px; 
+  margin-left: 292px;
+  margin-bottom: 20px;
+}
+#dash-line4 {
+  height: 230px;
+  margin-left: 340px;
+  margin-bottom: 20px;
+}
+#dash-line5 {
+  height: 230px; 
+  margin-left: 389px;
+  margin-bottom: 20px;
+}
+#dash-line6 {
+  height: 230px;
+  margin-left: 438px;
+  margin-bottom: -30px;
+}
+.dashed-lines2{
+  margin-bottom: 110px;
+}
+.nmbrs{
+  display: flex;
+  flex: 1;
+  flex-direction: row;
+  margin-left: 128px;
+  margin-bottom: 80px;
+  margin-top: 15px;
+}
+.nmbrs p{
+  font-family: karla;
+  font-size: 17px;
+  margin-right: 38px;
+  color: black;
+}
+#nbr{
+  margin-top: -135px;
+}
+#LN{
+  animation: stretchline 2s linear forwards; 
+  margin-top: -41px;
+  margin-left: 110px;
+}
+
+@keyframes stretchline {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 4.6%; 
+  }
+  100% {
+    width: 9.2%;
+  }
+}
+#LN1{
+  margin-left: 155px;
+  margin-bottom: 216px;
+  animation: stretchline1 2s linear forwards; 
+  animation-delay: 2s;
+}
+
+@keyframes stretchline1 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 3%; 
+  }
+  100% {
+    height: 5.9%;
+  }
+}
+#LN2{
+  animation: stretchline2 2s linear forwards; 
+  margin-left: 155px;
+  margin-top: -36px;
+  animation-delay: 4s;
+}
+
+@keyframes stretchline2 {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 9.25%; 
+  }
+  100% {
+    width: 18.5%;
+  }
+}
+#LN3{
+  height: 0px;
+}
+#LN4{
+  margin-top: 354px;
+  margin-left: 243px;
+  margin-bottom: -300px;
+  animation: stretchline4 2s linear forwards; 
+  animation-delay: 6s;
+}
+  
+  @keyframes stretchline4 {
+    0% {
+      height: 0;
+    }
+    50% {
+      height: 3%; 
+    }
+    100% {
+      height: 5.9%;
+    }
+  }
+#LN5{
+  animation: stretchline5 2s linear forwards; 
+  margin-left: 245px;
+  margin-top: 34px;
+  animation-delay: 8s;
+}
+
+@keyframes stretchline5 {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 9.8%; 
+  }
+  100% {
+    width: 19.59%;
+  }
+}
+#LN6{
+  height: 0px;
+}
+#LN7{
+  margin-left: 337px;
+  margin-bottom: 217px;
+  animation: stretchline7 2s linear forwards; 
+  animation-delay: 10s;
+}
+
+@keyframes stretchline7 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 3%; 
+  }
+  100% {
+    height: 6.42%;
+  }
+}
+#LN8{
+  animation: stretchline8 2s linear forwards; 
+  margin-left: 340px;
+  margin-top: -40px;
+  animation-delay: 12s;
+}
+
+@keyframes stretchline8 {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 5.1%;  
+  }
+  100% {
+    width: 10.2%;
+  }
+}
+#LN9{
+  margin-top: 350px;
+  margin-left: 387px;
+  animation: stretchline9 2s linear forwards;  
+  animation-delay: 14s;
+}
+
+@keyframes stretchline9 {
+  0% {
+    height: 0;
+  }
+  50% {
+    height: 3%; 
+  }
+  100% {
+    height: 6.4%;
+  }
+}
+#LN10{
+  animation: stretchline10 2s linear forwards; 
+  margin-left: 390px;
+  margin-top: 35px;
+  animation-delay: 16s;
+}
+
+@keyframes stretchline10 {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 3%; 
+  }
+  100% {
+    width: 10%;
+  }
+}
+/* Hide lines by default */
+.lines, .dashed-lines, .arrows {
+  display: none;
+}
+
+/* Show lines when the radio button is checked */
+#c1:checked ~ .dascy__idTwo-card .lines,
+#c1:checked ~ .dascy__idTwo-card .dashed-lines,
+#c1:checked ~ .dascy__idTwo-card .arrows {
+  display: block;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .dascy__idTwo-encoding{
     background-color: #F0D0FF;
 }
@@ -716,5 +993,29 @@ input:checked + label .dascy__idTwo-description{
   }
   100% {
     width: 14%;
+  }
+}
+#Line6{
+  width: 0;
+  height: 2px; 
+  background-color: blue;
+  position: relative;
+  transform: rotate(-90deg);
+  animation: stretchLine16 2s linear forwards; 
+  margin-left: 340px;
+  margin-top: -2px;
+  animation-delay: 12s;
+  /**/
+}
+
+@keyframes stretchLine16 {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 3%; 
+  }
+  100% {
+    width: 6.5%;
   }
 }
