--- a/dascy_frontend/src/Pages/OSI/Topology/topo.css
+++ b/dascy_frontend/src/Pages/OSI/Topology/topo.css
@@ -1,4 +1,10 @@
-
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: karla;
+   
+}
 .dascy__topo{
     width: 100%;
     height: 100vh;
